[package]
name = "bevy_lx"
version = "0.1.0"
edition = "2021"
authors = [ "Alexi Chepura <a.chepura@gmail.com>" ]
license = "MIT OR Apache-2.0"
description = "Bevy engine, logistics packages"
[workspace]
resolver = "2"
[workspace.dependencies]
bevy = { version = "0.9.1" }
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier", rev="190ee1447364111605218fbc5066044b6cb61d30", features=["serde-serialize"]}
[dependencies]
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
bevy_framepace = { version = "0.9.1"}
bevy_prototype_debug_lines = { version = "0.9.0", features = ["3d"] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_atmosphere = "0.5.0"
[profile.release]
codegen-units = 1